--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
