modified docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,26 +13,26 @@ services:
       - app
     networks:
       - my_network
-  database:
-    image: postgres:latest
-    container_name: database
-    environment:
-      POSTGRES_USER: csc309
-      POSTGRES_PASSWORD: csc309
-      POSTGRES_DB: mydb
-    ports:
-      - "5432:5432"
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    restart: always
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "csc309", "-d", "mydb"]
-      interval: 5s
-      retries: 5
-    networks:
-      - my_network
+  # database:
+  #   image: postgres:latest
+  #   container_name: database
+  #   environment:
+  #     POSTGRES_USER: csc309
+  #     POSTGRES_PASSWORD: csc309
+  #     POSTGRES_DB: mydb
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     - pg_data:/var/lib/postgresql/data
+  #   restart: always
+  #   healthcheck:
+  #     test: ["CMD", "pg_isready", "-U", "csc309", "-d", "mydb"]
+  #     interval: 5s
+  #     retries: 5
+  #   networks:
+  #     - my_network
   app:
-    image: afs
+    image: small-webapp:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -40,23 +40,23 @@ services:
       - "3000:3000"
     volumes:
       - ./src:/app/src
+      - small-webapp-data:/app/data
+
     environment:
-      - DATABASE_URL=postgresql://csc309:csc309@database:5432/mydb
+      - DATABASE_URL=file:./app/data/dev.db
       - BASE_API_URL=https://advanced-flights-system.replit.app
       - API_KEY=54d3070aa9328a1dd7b7b4455e86a330038c289dafc7fda985777b8030079b01
       - ACCESS_TOKEN_SECRET=9afdadec778f9f450187295121c531e25b6ee7a8f553386bbeda685abca64355
       - REFRESH_TOKEN_SECRET=9afdadec778f9f450187295121c531e25b6ee7a8f553386bbeda685abca64355
     networks:
       - my_network
-    depends_on:
-      database:
-        condition: service_healthy      
+    # depends_on:
+    #   database:
+    #     condition: service_healthy      
 networks:
   my_network:
     driver: bridge
 
 volumes:
-  pg_data:
-  afs_pg_data:
-
+  
   #TODO: Doublecheck this later when I end up actually using docker-compose
